Build script update

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "jquery": "latest",
     "bootstrap": "latest",
-    "requirejs": "latest"
+    "requirejs": "latest",
+    "ember": "latest"
   },
   "keywords": [
     "spring",
