--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
   "bugs": {
     "url": "https://github.com/mihkels/spring-boot-getting-started/issues"
   },
-  "homepage": "https://github.com/mihkels/spring-boot-getting-started"
+  "homepage": "https://github.com/mihkels/spring-boot-getting-started",
   "devDependencies": {
-      "grunt": "~0.4.2"
+      "grunt": "~0.4.2",
+      "grunt-contrib-clean": "~0.5.0",
+      "grunt-contrib-uglify": "~0.4.0",
+      "grunt-contrib-watch": "~0.6.0",
+      "grunt-contrib-copy": "~0.5.0",
+      "grunt-contrib-concat": "~0.3.0",
+      "grunt-contrib-connect": "~0.7.1",
+      "grunt-contrib-cssmin": "~0.8.0",
+      "grunt-bowercopy": "~0.9.0"
   }
 }
