--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: java
 before_install:
   - npm install grunt-cli -g
   - npm install bower -g
+  - npm install
 
 jdk:
   - oraclejdk7
 
 script:
-  - grunt
+  - grunt -verbose
