--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -42,5 +42,8 @@ jobs:
       - name: Run linter
         run: deno lint
 
+      - name: Install dependencies 
+        run: deno install
+        
       - name: Run build
         run: deno task build
